# EasyRec

./: .git_bin_path  .git_bin_url  .git_oss_config  .git_oss_config_pub  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  black.toml  keep_model.config  model_conf.json  pre-commit  pyproject.toml  requirements.txt  setup.cfg  setup.py  taobao_train_data_8192
sparse_operation_kit/: .gitignore  .pypirc  CMakeLists.txt  MANIFEST.in  ReadMe.md  pyproject.toml  setup.py
sparse_operation_kit/cmakes/: FindNCCL.cmake  FindNVTX.cmake  FindTensorFlow.cmake
sparse_operation_kit/documents/: Makefile  ReadMe.md
sparse_operation_kit/documents/source/: conf.py  index.rst  intro_link.md  util.py
sparse_operation_kit/documents/source/_templates/: versions.html
sparse_operation_kit/documents/source/api/: index.rst  init.rst
sparse_operation_kit/documents/source/api/embeddings/: index.rst  saver.rst  (+1 more)
sparse_operation_kit/documents/source/env_vars/: env_vars.md
sparse_operation_kit/documents/source/examples/: amp.md  dense_demo.md  dlrm.md  index.rst
sparse_operation_kit/documents/source/features/: features.md
sparse_operation_kit/documents/source/get_started/: get_started.md
sparse_operation_kit/documents/source/known_issues/: issues.md
sparse_operation_kit/documents/source/performance/: dense_demo.md  dlrm.md  index.rst
sparse_operation_kit/documents/source/release_notes/: release_notes.md
sparse_operation_kit/documents/tutorials/: utility.py
sparse_operation_kit/documents/tutorials/DLRM/: ReadMe.md  bin2csv.py  dataset.py  main.py  models.py  utils.py
sparse_operation_kit/documents/tutorials/DLRM_Benchmark/: README.md  dataset.py  hvd_wrapper.sh  main.py  model.py  trainer.py
sparse_operation_kit/documents/tutorials/DenseDemo/: ReadMe.md  gen_data.py  models.py  run_sok_MirroredStrategy.py  run_sok_MultiWorker_mpi.py  run_sok_horovod.py  run_tf.py  split_data.py
sparse_operation_kit/documents/tutorials/MixedPrecision/: ReadMe.md  amp_tf1.py  amp_tf2.py
sparse_operation_kit/documents/tutorials/SparseDemo/: ReadMe.md
sparse_operation_kit/kit_cc/framework/kernels/: assign_embedding_variable_op.cc  bprop.cc  create_embedding_dense.cc  create_embedding_sparse.cc  create_global_adam_optimizer.cc  create_var.cc  custom_optimizer_apply_gradients.cc  dense_fprop.cc  dump_to_file.cc  embedding_variable.cc  embedding_variable.h  embedding_variable_assign_sub.cu  gen_random_seed.cc  get_nccl_unique_id.cc  load_embedding_values.cc  optimizer_init.cc  plugin_init.cc  read_embedding_variable_op.cc  restore_from_file.cc  sparse_fprop.cc  test_op.cu
sparse_operation_kit/kit_cc/framework/ops/: assign_embedding_variable_op.cc  bprop.cc  create_embedding_dense.cc  create_embedding_sparse.cc  create_global_adam_optimizer.cc  create_var.cc  custom_optimizer_apply_gradients.cc  dense_fprop.cc  dump_to_file.cc  embedding_variable_assign_sub.cc  init.cc  load_embedding_values.cc  optimizer_init.cc  read_embedding_variable_op.cc  restore_from_file.cc  sparse_fprop.cc  test_op.cc
sparse_operation_kit/kit_cc/kit_cc_infra/include/: common.cuh  common.h  facade.h
sparse_operation_kit/kit_cc/kit_cc_infra/src/: common.cc  common.cu  facade.cc
sparse_operation_kit/kit_cc_impl/embedding/dispatcher/: all2all_input_dispatcher.cu  all2all_output_dispatcher.cu  all_gather_dispatcher.cu  reduce_scatter_dispatcher.cu
sparse_operation_kit/kit_cc_impl/embedding/lookuper/: dense_gather.cu  distributed.cc
sparse_operation_kit/kit_cc_impl/embedding/operation/: csr_conversion_distributed.cu
sparse_operation_kit/kit_cc_impl/operations/: CMakeLists.txt
sparse_operation_kit/notebooks/: ReadMe.md  benchmark.ipynb  demo_with_nvtabular_datareader.ipynb  sparse_operation_kit_demo.ipynb
sparse_operation_kit/sparse_operation_kit/: __init__.py  kit_lib.py
sparse_operation_kit/sparse_operation_kit/core/: __init__.py  _version.py  context_scope.py  embedding_layer_handle.py  embedding_variable_v1.py  embedding_variable_v2.py  graph_keys.py  initialize.py  inplace_initializer.py
sparse_operation_kit/sparse_operation_kit/embeddings/: __init__.py  all2all_dense_embedding.py  distributed_embedding.py  embedding_ops.py  get_embedding_op.py  tf_distributed_embedding.py
sparse_operation_kit/sparse_operation_kit/operations/: __init__.py  compat_ops_lib.py
sparse_operation_kit/sparse_operation_kit/optimizers/: __init__.py  adam.py  base_optimizer.py  optimizer.py  utils.py
sparse_operation_kit/sparse_operation_kit/saver/: Saver.py  __init__.py
sparse_operation_kit/sparse_operation_kit/tf/: __init__.py
sparse_operation_kit/sparse_operation_kit/tf/keras/: __init__.py
sparse_operation_kit/unit_test/: CMakeLists.txt
sparse_operation_kit/unit_test/cc/: unit_tester.cc  unit_tester.h
sparse_operation_kit/unit_test/cc/kernels/: all_gather_dispatcher.cc  csr_conversion_distributed.cc  reduce_scatter_dispatcher.cc
sparse_operation_kit/unit_test/cc/ops/: unit_test_ops.cc
sparse_operation_kit/unit_test/python/: sok_unit_test_lib.py
sparse_operation_kit/unit_test/test_scripts/: script.sh
sparse_operation_kit/unit_test/test_scripts/tf1/: dense_models.py  script.sh  sparse_models.py  strategy_wrapper.py  test_dense_emb_demo.py  test_mirrored_strategy.py  test_sparse_emb_demo.py  utils.py
sparse_operation_kit/unit_test/test_scripts/tf2/: dense_models.py  multi_worker_base.py  prepare_dataset.py  script.sh  single_worker_base.py  sparse_models.py  test_all_gather_dispatcher.py  test_csr_conversion_distributed.py  test_dense_emb_demo_model_horovod.py  test_dense_emb_demo_model_horovod_use_tf_set_device.py  test_dense_emb_demo_model_multi_worker.py  test_dense_emb_demo_model_single_worker.py  test_multi_dense_emb_demo_model_hvd.py  test_multi_dense_emb_demo_model_hvd_use_tf_set_device.py  test_multi_dense_emb_demo_model_mpi.py  test_multi_dense_emb_demo_model_mpi_use_tf_set_device.py  test_reduce_scatter_dispatcher.py  test_sparse_emb_demo_model_multi_worker.py  test_sparse_emb_demo_model_single_worker.py  tf25_script.sh  utils.py
(+1215 files in other folders)
